# kjoconnor.github.io

./: .gitignore  CNAME  archives.html  authors.html  categories.html  index.html  my-first-post.html  pelicanconf.py  publishconf.py  pyproject.toml  ssrfs-still-a-threat.html  tags.html
.github/workflows/: publish.yml
2025/01/29/: my-first-post
2025/01/29/my-first-post/: index.html
2025/01/29/ssrfs-still-a-threat/: index.html
archives/: 2025  2025-01
author/: kevin-oconnor.html
category/: blog.html  security.html
content/blog/: 2025-01-29-ssrfs-still-a-thread.md
content/blog/2025/01/29/: first-post.md  ssrfs-still-a-thread.md
content/blog/2025/01/30/: fun-reddit-facts.md
content/pages/: about.md
drafts/: fun-times-at-reddit.html  ssrfs-still-a-threat.html
feeds/: all.atom.xml  blog.atom.xml
pages/: about.html
tag/: ai.html  security.html  ssrf.html
theme/css/: cid.css.map
themes/cid/src/sass/: cid.sass
themes/cid/static/css/: cid.css
themes/cid/templates/: article.html  base.html  header.html  tag.html
